# firebird

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  configure.ac  configure.in  firebird.code-workspace.template  skipfile.txt
.github/workflows/: main.yml  static-build.yml
builds/cmake/: BuildFunctions.cmake  Configure.cmake
builds/posix/: Makefile.in  Makefile.in.examples  Makefile.in.extauth  Makefile.in.extern.editline  Makefile.in.plugins_examples  darwin.defaults  firebird.vers  make.android.arm64  make.android.arme  make.android.x86  make.android.x86_64  make.defaults  make.rules  make.shared.targets  make.shared.variables  prefix.darwin_x86_64  prefix.freebsd_amd64  prefix.linux  prefix.linux_amd64  prefix.linux_generic  prefix.linux_loongarch64  prefix.linux_sw_64  prefix.mingw  static_client.sh.in
builds/win32/: compile_static.bat  fix_fbclient_static.bat  make_all.bat  make_boot.bat  preprocess.bat  setenvvar.bat  y.txt
doc/: Firebird_conf.txt  README.StaticClient.md  README.build.msvc.html  README.cast.format.md  README.connection_strings  README.isc_info_xxx  README.isql_enhancements.txt  README.services_extension  README.tablespaces  README.using_statement.md  Using_OO_API.md  WhatsNew
doc/license/: README.license.usage.txt
doc/sql.extensions/: README.MED.md  README.aggregate_functions.md  README.builtin_functions.txt  README.cast.format.md  README.context_variables2  README.create_table_as_query.md  README.ddl.txt  README.decimal_and_non_decimal_literals.txt  README.declared_local_temporary_tables.md  README.floating_point_types.md  README.generate_series.md  README.grouping_sets.md  README.hex_literals.txt  README.hypothetical_set_agg_functions.md  README.listagg  README.local_temporary_tables.md  README.packaged_temporary_tables.md  README.packages.txt  README.percentile_disc_cont.md  README.schemas.md  README.set_transaction.txt  README.skip_locked.md  README.sql_security.txt  README.time_zone.md  README.unlist
examples/extauth/: ExtAuth.cpp
examples/interfaces/: 11.shutdown.cpp
examples/replication/: fbSampleReplicator.cpp
examples/udr/: Functions.cpp
lang_helpers/: gds_codes.ftn  gds_codes.pas
src/: CMakeLists.txt
src/alice/: alice.cpp  alice.h  alice_meta.epp  alice_meta.h  alice_proto.h  aliceswi.h  exe.cpp  exe_proto.h  tdr.cpp  tdr_proto.h
src/auth/: AuthDbg.cpp  AuthDbg.h  SecDbCache.cpp  SecDbCache.h
src/burp/: BurpTasks.cpp  BurpTasks.h  OdsDetection.epp  OdsDetection.h  backu_proto.h  backup.epp  burp.cpp  burp.h  burp_proto.h  burpswi.h  canon_proto.h  canonical.cpp  misc.cpp  misc_proto.h  mvol.cpp  mvol_proto.h  resto_proto.h  restore.epp
src/common/: Auth.cpp  Auth.h  BigInteger.cpp  BigInteger.h  CharSet.cpp  CharSet.h  CsConvert.h  CvtFormat.cpp  CvtFormat.h  DecFloat.cpp  DecFloat.h  Int128.cpp  Int128.h  IntlParametersBlock.cpp  IntlParametersBlock.h  IntlUtil.cpp  IntlUtil.h  MsgMetadata.cpp  MsgMetadata.h  MsgUtil.cpp  ParserTokens.h  ScanDir.cpp  ScanDir.h  SimilarToRegex.cpp  SimilarToRegex.h  StatementMetadata.cpp  StatusArg.cpp  StatusArg.h  StatusHolder.cpp  Task.cpp  Task.h  TextType.cpp  TextType.h  ThreadData.cpp  ThreadStart.cpp  ThreadStart.h  TimeZoneUtil.cpp  TimeZoneUtil.h  TimeZones.h  Tokens.cpp  (+42 more)
src/dsql/: AggNodes.cpp  AggNodes.h  BlrDebugWriter.cpp  BlrDebugWriter.h  BoolNodes.cpp  BoolNodes.h  DSqlDataTypeUtil.cpp  DSqlDataTypeUtil.h  DdlNodes.epp  DdlNodes.h  DsqlBatch.cpp  DsqlBatch.h  DsqlCompilerScratch.cpp  DsqlCompilerScratch.h  DsqlCursor.cpp  DsqlCursor.h  DsqlRequests.cpp  DsqlRequests.h  DsqlStatementCache.cpp  DsqlStatementCache.h  DsqlStatements.cpp  DsqlStatements.h  ExprNodes.cpp  ExprNodes.h  Keywords.cpp  Keywords.h  NodePrinter.h  Nodes.h  PackageNodes.epp  PackageNodes.h  Parser.cpp  Parser.h  StmtNodes.cpp  StmtNodes.h  TablespaceNodes.epp  TablespaceNodes.h  Visitors.h  WinNodes.cpp  WinNodes.h  btyacc_fb.ske  (+23 more)
src/extlib/: UdfBackwardCompatibility.cpp  ib_util.cpp
src/gpre/: ada.cpp  c_cxx.cpp  cmd.cpp  cmd_proto.h  cme.cpp  cme_proto.h  cmp.cpp  cmp_proto.h  exp.cpp  exp_proto.h  gpre.cpp  gpre.h  gpre_meta.h  gpre_proto.h  gpreswi.h  hsh.cpp  hsh.h  hsh_proto.h  int_cxx.cpp  jrdme_proto.h  jrdmet.cpp  lang_proto.h  movg.cpp  movg_proto.h  msc.cpp  msc_proto.h  obj_cxx.cpp  par.cpp  par_proto.h  parse.h  pat.cpp  pat.h  pat_proto.h  sqe.cpp  sqe_proto.h  sql.cpp  sql_proto.h  words.h
src/include/: consts_pub.h  fb_blk.h  fb_exception.h  fb_types.h  ibase.h
src/intl/: cs_icu.cpp  cv_icu.cpp  cv_narrow.cpp  lc_ascii.cpp  lc_dos.cpp  lc_ksc.cpp  ldcommon.h
src/iscguard/: cntl_guard.cpp  cntlg_proto.h  iscguard.cpp
src/isql/: ColList.cpp  ColList.h  Extender.cpp  Extender.h  FrontendLexer.cpp  FrontendLexer.h  FrontendParser.cpp  FrontendParser.h  InputDevices.cpp  InputDevices.h  OptionsBase.cpp  OptionsBase.h  PtrSentry.h  extra_proto.h  extract.epp  isql.epp  isql.h  isql_proto.h  isqlswi.h  iutils.cpp  iutils_proto.h  main.cpp  show.epp  show_proto.h
src/jrd/: Attachment.cpp  Attachment.h  BlobUtil.cpp  BlobUtil.h  BulkInsert.cpp  BulkInsert.h  CacheVector.cpp  CacheVector.h  CharSetContainer.cpp  CharSetContainer.h  Coercion.cpp  Coercion.h  Collation.cpp  Collation.h  ConfigTable.cpp  ConfigTable.h  Constant.epp  Constant.h  CryptoManager.cpp  CryptoManager.h  DataTypeUtil.cpp  DataTypeUtil.h  Database.cpp  Database.h  DbCreators.cpp  DbCreators.h  DebugInterface.cpp  DebugInterface.h  EngineInterface.h  ExtEngineManager.cpp  ExtEngineManager.h  ForeignServer.cpp  ForeignServer.h  Function.epp  Function.h  GarbageCollector.cpp  GarbageCollector.h  GlobalRWLock.cpp  GlobalRWLock.h  HazardPtr.h  (+215 more)
src/lock/: lock.cpp  lock_proto.h  print.cpp
src/misc/: ods.txt  writeBuildNum.sh
src/msgs/: build_file.cpp  facilities2.sql  load.epp  messages2.sql  symbols2.sql  system_errors2.sql
src/qli/: compile.cpp  dtr.h  eval.cpp  expand.cpp  gener.cpp  meta.epp  parse.cpp  symbols.h  words.h
src/remote/: CMakeLists.txt  SockAddr.h  inet.cpp  inet_proto.h  merge.cpp  merge_proto.h  parse_proto.h  parser.cpp  proto_proto.h  (+6 more)
vcpkg-custom/: DELETE-ME.txt
(+370 files in other folders)
